# hacklytics

myApp/backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
myApp/backend/alembic/: env.py
myApp/backend/alembic/versions/: 4be3a393eb77_initial_schema.py  7c8d6e5a2f31_user_profiles_schema.py  8aa9d6bc2f10_add_social_graph_tables.py  a7b8c9d0e1f2_add_user_vector_point_ids.py  c4d1b2e9a7f3_add_group_match_tables.py  d3f4b8a1c9e2_display_name_and_hobby_catalog.py  e1f2a3b4c5d6_add_group_chat_messages.py  f1a2b3c4d5e6_add_restaurant_ratings.py
myApp/backend/app/: main.py
myApp/backend/app/core/: config.py  deps.py  security.py
myApp/backend/app/crud/: group_chat.py  group_match.py  hobby.py  restaurant.py  restaurant_rating.py  social.py  user.py  vector_index.py
myApp/backend/app/db/: base.py
myApp/backend/app/models/: group_chat.py  group_match.py  hobby.py  restaurant.py  restaurant_rating.py  social.py  user.py  vector_index.py
myApp/backend/app/schemas/: admin_embeddings.py  (+11 more)
myApp/backend/seed/: hobbies.json  restaurants.json
myApp/backend/tests/: conftest.py  test_actian_vector_store_adapter.py  test_actian_vector_store_integration.py  test_admin_embeddings.py  test_admin_hobbies.py  test_admin_vector_diagnostics.py  test_auth.py  test_embedding_pipeline.py  test_group_chat.py  test_group_match_generation.py  test_group_matches.py  test_hobbies_and_restaurant_ratings.py  test_me_profile.py  test_preference_profile_builder.py  test_restaurants.py  test_social.py  test_vector_store_contracts.py
(+64 files in other folders)
